# codecamp-windywizards_test

./: .gitignore  README.md  code_week3.py  code_week4.py  colaboration.md  main.py  pyproject.toml  requirements.txt  test_week3.py  test_week4.py
.github/workflows/: classroom.yml
codecamp/: __init__.py
data/: CT.txt  resp_12_ms_TI_0.1.txt  turbie_parameters.txt
example/: code_week3.py  code_week4.py
src/codecamp/: __init__.py
test/: test_week3.py  test_week4.py
