# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "codecamp"
description = "Simulate the tower and blade deflection"
version = "0.0.1"
authors = [
    { name = "Lara Schmidt, Leif Stolte, François de Weck ", email = "s250244@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/codecamp-windywizards.git"
